<resources>
    <string name="app_name">Inquisitor</string>
    <string name="app_desc">HRIS Staff Testing application</string>

    <!-- Strings related to login -->
    <string name="login_title">Adjudicator Login</string>
    <string name="login_subtitle">Please log in using your HRIS login. This is the same as you use in the PC App or Web.</string>
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Network permissions are needed for validating login and permissions first time.
    </string>
    <!-- strings for utils and database -->
    <string name="imgurl">https://hrisrss.org/q/img/</string>
    <string name="qurl">https://hrisrss.org/q/</string>
    <string name="apiurl">https://hrisrss.org/cgi-bin/api.pl</string>
    <string name="save_path">data/uk.co.HRISTest/</string>
    <!-- candidate select activity-->
    <string name="logout_title">Logout</string>
    <string name="title_activity_candidate">Select Candidate</string>
    <string name="candTop">Select Candidate</string>
    <string name="candHRIDerr">too long for an HRIS ID</string>
    <string name="candNotFound">No matching staff found</string>
    <string name="candFound">%d Staff match</string>
    <string name="candHint">Name or HRIS ID</string>
    <string name="title_activity_questionnaire">Inquisitor</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!-- questionnaire section -->
    <string name="qNavDesc">Back to start page</string>
    <string name="dl_title">Downloading</string>
    <string name="dl_subtitle">Getting the questions and images for the test now.</string>
    <string name="title_activity_main">Inquisitor: Start</string>

    <!-- main activity options -->
    <string name="main_title">Inquisitor</string>
    <string name="main_subtitle">Choose a questionnaire to start</string>
    <string name="title_activity_question">Inquisitor:</string>
    <string name="choosestaff">Select Test Candidate</string>
    <string name="chooseNow">Click to choose now\nor you can set it later.</string>
    <string name="qStart">Click to start questionnaire</string>
    <string name="qStop">Click to end questionnaire</string>
    <string name='timerExpired'>00:00</string>
    <string name='endSession'>The examination is complete, Saving....</string>
    <string name='staffSelect'>Staff selected: %1$s [%2$s]</string>
    <string name='candBottom'>Use Location limit the list to an area. You can only see staff in areas your HRIS login gives you permission to see.</string>
    <string name="title_activity_upload">Completed Questionnaires</string>
    <string name="upload_toptext">Stored Questionnaires</string>
    <string name="upload_noQ">No Stored Questionnaires</string>
    <string name="delPurge">Delete Uploaded Questionnaires</string>
    <string name="delSel">Delete selected questionnaire?</string>
    <string name="uploading">Uploading...</string>
    <string name="nostaff">No staff member added</string>
    <string name="setstaff">Set staff member now</string>
    <string name="answerImgDesc">click to choose this as answer</string>
    <string name="qnavfooter">Swipe left or right or click buttons</string>
    <string name="wait1">Reading saved qestionnaires.</string>
    <string name="errImg">Error loading image.</string>
    <string name="errLogin1">Cannot access internet to check login.</string>
    <string name="errLogin2">Error accessing internet to check login.</string>
    <string name="errLogin3">No reply from server, please check your settings and try again.</string>
    <string name="tvLocationPrompt">Location</string>
    <string name="butQuit">Quit Application</string>
</resources>
